cambios  meta, ico

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="https://financiatodopa.com/"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,11 +25,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>FinanciaTodo</title>
+    <title>Financiera FinanciaTodo | TU PRESTAMO IDEAL</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://financiatodopa.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Financiera FinanciaTodo | TU PRESTAMO IDEAL">
+  <meta property="og:description" content="TU PRESTAMO IDEAL, Con grandes esfuerzos llegas a la meta, pide tu préstamo personal para remodelacion, auto, viajes, estudios, y más. 
+  Aprobación en 24 horas y requisitos básicos.">
+  <meta property="og:image" content="%PUBLIC_URL%/financiatodo_panama.png">
+  <meta property="og:image:alt" content="Financiera FinanciaTodo Pide tu préstamo personal para remodelacion, auto, viajes, estudios, y más"/>
+      
+  <meta name="description" content="Financiatodo.com hace parte de uno de los grupos financieros más reconocidos en Panamá. ¿Necesitas reparar tu vehículo? ¿Te enfermaste y tienes gastos médicos? ¿O tienes algo que pagar que no tenías en cuenta? Si tienes alguna de estas 
+  emergencias financieras, no te preocupes: simplemente reacciona. Financia Todo te resuelve con tan sólo una llamada.">
+ <meta name="keywords" content="Panama, PTY, Financiera, Prestamos, préstamo personal, remodelacion, prestamos auto, prestamos viaje, prestamos gastos medicos ">
+ <meta name="author" content="Financiera FinanciaTodo">
+ <meta name="robots" content="index"/>
+ <meta name="robots" content="follow"/>
+ <meta name="revisit-after" content="3 days"/>
+ <meta name="GOOGLEBOT" content="INDEX,FOLLOW"/>
+ <META NAME="Copyright" CONTENT="© Financiera FinanciaTodo | TU PRESTAMO IDEAL .">
+   
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesita habilitar Javascript para que funcione esta web app.</noscript>
     <div id="root"></div>
   
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
